--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
 
     <!-- Link the style sheets and Google font -->
-    <link rel = "stylesheet" href= "css/html5reset.css">
+    <link rel = "html5reset" href= "css/html5reset.css">
     <link rel = "stylesheet" href= "css/style.css">
-    <link rel = "icon" href = "images/favicon.io">
+    <link rel = "icon" href = "images/favicon.ico">
     <link rel = 'stylesheet' href='https://fonts.googleapis.com/css?family=Andika'>
 
     
@@ -34,7 +34,9 @@
   * You can do it! (*•̀ᴗ•́*)و
   ******************************************** -->
   <body>
+    <header>
     <h1>AU National Old Bird Hall of Fame Marathon Distance</h1>
+    </header>
     <main>
       <table>
         <caption><a href = "https://pigeon-ndb.com/results/">Hall of Fame Marathon Records</a></caption>
