--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
 
     <!-- Link the style sheets and Google font -->
-    <link rel = "html5reset" href= "css/html5reset.css">
+    <link rel = "stylesheet" href= "css/html5reset.css">
     <link rel = "stylesheet" href= "css/style.css">
     <link rel = "icon" href = "images/favicon.ico">
     <link rel = 'stylesheet' href='https://fonts.googleapis.com/css?family=Andika'>
